--- a/home/index.html
+++ b/home/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+    <!-- login.css 是我们自己写的css样式 -->
+    <link rel="stylesheet" href="../assets/css/login.css">
 
+<body>
+    <div class="layui-main log">
+        <img src="../assets/images/logo.png" alt="">
+    </div>
+
+    <div class="box">
+        <div class="title"></div>
+        <div class="loginAndRegi">
+            <!-- 登入form -->
+            <div class="login">
+
+                <form class="layui-form" id="loginForm">
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-face-surprised"></i>
+                        <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                            autocomplete="off" class="layui-input">
+                    </div>
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-loading"></i>
+                        <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
+                            autocomplete="off" class="layui-input">
+                    </div>
+                    <div class="layui-form-item">
+                        <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">立即提交</button>
+                    </div>
+                    <a href="javascript:;" id="goToRegi">去注册账号</a>
+
+                </form>
+            </div>
+            <!-- 华丽的分割线 -->
+            <div class="register">
+                <form class="layui-form" id="regiForm">
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-face-surprised"></i>
+                        <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                            autocomplete="off" class="layui-input">
+                    </div>
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-loading"></i>
+                        <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
+                            autocomplete="off" class="layui-input passInp">
+                    </div>
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-loading"></i>
+                        <input type="password" name="title" required lay-verify="required|pass|repass"
+                            placeholder="请再次密码" autocomplete="off" class="layui-input">
+                    </div>
+                    <div class="layui-form-item">
+                        <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">立即提交</button>
+                    </div>
+                    <a href="javascript:;" id="goToLogin">去登录</a>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    </div>
+
+    <!-- 引入layui的js文件 -->
+    <script src="../assets/lib/layui/layui.all.js"></script>
+    <!-- 引入jQ -->
+    <script src="../assets/lib/jquery.js"></script>
+    <!-- 引入我们自己写的js： 套路：先移入第三方的js脚本，在引入自己写的 -->
+    <script src="../assets/js/login.js"></script>
 </body>
+
 </html>
