--- a/home/homepage.html
+++ b/home/homepage.html
@@ -1,15 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>76期大事件项目开发</title>
+  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="/assets/fonts/iconfont.css">
+  <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 
-<body>
-  <h1> 后台主页</h1>
-  <script>
-  </script>
+<body class="layui-layout-body">
+  <div class="layui-layout layui-layout-admin">
+    <div class="layui-header">
+      <div class="layui-logo">layui 后台布局</div>
+      <!-- 头部区域（可配合layui已有的水平导航） -->
+      <ul class="layui-nav layui-layout-left">
+        <li class="layui-nav-item"><a href="">控制台</a></li>
+        <li class="layui-nav-item"><a href="">商品管理</a></li>
+        <li class="layui-nav-item"><a href="">用户</a></li>
+        <li class="layui-nav-item">
+          <a href="javascript:;">其它系统</a>
+          <dl class="layui-nav-child">
+            <dd><a href="">邮件管理</a></dd>
+            <dd><a href="">消息管理</a></dd>
+            <dd><a href="">授权管理</a></dd>
+          </dl>
+        </li>
+      </ul>
+      <ul class="layui-nav layui-layout-right">
+        <li class="layui-nav-item">
+          <a href="javascript:;">
+            <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+            <span class="textAvatar">T</span>
+            <span>个人中心</span>
+          </a>
+          <dl class="layui-nav-child">
+            <dd><a href="">基本资料</a></dd>
+            <dd><a href="">安全设置</a></dd>
+          </dl>
+        </li>
+        <li class="layui-nav-item"><a href=""><span class="iconfont icon-tuichu"></span>退出</a></li>
+      </ul>
+    </div>
+
+    <div class="layui-side layui-bg-black">
+      <div class="layui-side-scroll">
+        <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+        <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
+          <div class="info">
+            <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+            <span class="textAvatar">T</span>
+            <span id="welcome">欢迎，T800</span>
+          </div>
+          <li class="layui-nav-item layui-this"><a href="./dashboard.html" target="layuiBody"><span
+                class="iconfont icon-home"></span>首页</a>
+          </li>
+          <li class="layui-nav-item ">
+            <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
+            <dl class="layui-nav-child">
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i>
+                  文章列表</a></dd>
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i>
+                  文章类别</a></dd>
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i>
+                  发表文章</a></dd>
+            </dl>
+          </li>
+          <li class="layui-nav-item">
+            <a href="javascript:;"><span class="iconfont icon-user"></span>基本资料</a>
+            <dl class="layui-nav-child">
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-gift"></i>
+                  基本资料</a></dd>
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-rss"></i>
+                  更换头像</a></dd>
+              <dd><a href="javascript:;"><i class="layui-icon layui-icon-android"></i>
+                  重置密码</a></dd>
+            </dl>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
+    <div class="layui-body">
+      <!-- 内容主体区域 -->
+
+
+      <!--这个盒子需要溢出隐藏 -->
+      <iframe width="100%" height="100%" src="../home/dashboard.html" name="layuiBody" frameborder="0"></iframe>
+    </div>
+
+    <div class="layui-footer">
+      <!-- 底部固定区域 -->
+      © AKB TEAMSH 曾鸶淳
+    </div>
+  </div>
+
+
 </body>
+<script src="/assets/lib/layui/layui.all.js"></script>
+<!-- 引入jQ -->
+<script src="/assets/lib/jquery.js"></script>
+<!-- 引入ajax的配置项 -->
+<script src="/assets/js/ajaxConfig.js"></script>
+<!-- 引入自己的js文件 -->
+<script src="/assets/js/index.js"></script>
 
 </html>
